WIP: Mostly correct appearance in the web-version, but some misalignments remain in the exported pdf

--- a/print.css
+++ b/print.css
@@ -13,5 +13,4 @@ header {
 
 .page {
     margin: 0 !important;
-    box-shadow: none !important;
 }
